test overflow fix

--- a/adminlte/schema/sketchy.css
+++ b/adminlte/schema/sketchy.css
@@ -12330,7 +12330,7 @@ select.form-control {
 }
 
 .list-group {
-  overflow: hidden;
+  /*overflow: hidden;*/
   background-color: #333;
   border: 2px solid #333;
   border-radius: 45px 15px 35px 5px/15px 5px 15px 65px;
